--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.16.4",
+    "node-sass": "^4.13.0",
     "nodemailer": "^6.1.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
