--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "nodemailer": "^6.3.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "2.1.8",
-    "react-twitter-embed": "^2.0.8"
+    "react-scripts": "^3.2.0",
+    "react-twitter-embed": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
